@@ -1,3 +1,8 @@
+2006-06-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/27177
+	* g++.dg/expr/cast7.C: New test.
+
 2006-06-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	PR target/27842
